--- a/combustion-android-ble/build.gradle
+++ b/combustion-android-ble/build.gradle
@@ -82,18 +82,18 @@ afterEvaluate {
                 from components.release
 
                 // You can then customize attributes of the publication as shown below.
-                groupId = "inc.combustion.framework"
-                artifactId = "combustion-framework-release"
-                version = "0.0.1"
+                groupId = "inc.combustion"
+                artifactId = "combustion-android-ble-release"
+                version = "0.0.2"
             }
             // Creates a Maven publication called “debug”.
             debug(MavenPublication) {
                 // Applies the component for the debug build variant.
                 from components.debug
 
-                groupId = "inc.combustion.framework"
-                artifactId = "combustion-framework-debug"
-                version = "0.0.1"
+                groupId = "inc.combustion"
+                artifactId = "combustion-android-ble-debug"
+                version = "0.0.2"
             }
         }
     }
