--- a/combustion-android-ble/src/main/AndroidManifest.xml
+++ b/combustion-android-ble/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN"
                      android:usesPermissionFlags="neverForLocation"
