--- a/combustion-android-ble/build.gradle
+++ b/combustion-android-ble/build.gradle
@@ -39,6 +39,19 @@ android {
         }
     }
 
+    // see: https://developer.android.com/studio/write/lint
+    lint {
+        // If set to true, turns off analysis progress reporting by lint.
+        quiet true
+        // If set to true (default), stops the build if errors are found.
+        abortOnError true
+        // If true, only report errors.
+        ignoreWarnings false
+        // If true, lint also checks all dependencies as part of its analysis. Recommended for
+        // projects consisting of an app with library dependencies.
+        checkDependencies true
+    }
+
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         kotlinOptions {
             freeCompilerArgs += [
