--- a/combustion-android-ble/build.gradle
+++ b/combustion-android-ble/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation("com.juul.kable:core:0.20.1")
     implementation("androidx.lifecycle:lifecycle-service:2.5.1")
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
+    implementation("no.nordicsemi.android:dfu:2.3.0")
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.2.0")
     androidTestImplementation("androidx.test.ext:junit:1.1.4")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.0")
