Use Jitpack for Kable Dependency

--- a/combustion-android-ble/build.gradle
+++ b/combustion-android-ble/build.gradle
@@ -84,7 +84,8 @@ dependencies {
     implementation("androidx.core:core-ktx:1.9.0")
     implementation("androidx.appcompat:appcompat:1.6.1")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
-    implementation("com.juul.kable:core:0.23.0-issue-485-1-SNAPSHOT")
+    // implementation("com.juul.kable:core:0.23.0-issue-485-1-SNAPSHOT")
+    implementation("com.github.JuulLabs.kable:core:0.23.0-issue-485-1-SNAPSHOT")
     implementation("androidx.lifecycle:lifecycle-service:2.5.1")
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.21")
     implementation("no.nordicsemi.android:dfu:2.3.0")
