--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url "https://www.jitpack.io" }
     }
 }
 rootProject.name = "Combustion Inc. Android Framework"
