--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,6 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # https://developer.android.com/studio/releases/gradle-plugin#disable-component-creation
-android.disableAutomaticComponentCreation=true
+android.nonTransitiveRClass=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
