--- a/combustion-android-ble/build.gradle
+++ b/combustion-android-ble/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     id("com.android.library")
     id("kotlin-android")
@@ -80,18 +82,18 @@ android {
 }
 
 dependencies {
-    implementation("androidx.core:core-ktx:1.9.0")
+    implementation("androidx.core:core-ktx:1.12.0")
     implementation("androidx.appcompat:appcompat:1.6.1")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
     implementation("com.juul.kable:core:0.25.1")
-    implementation("androidx.lifecycle:lifecycle-service:2.5.1")
-    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.21")
+    implementation("androidx.lifecycle:lifecycle-service:2.6.2")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.8.0")
     implementation("no.nordicsemi.android:dfu:2.3.0")
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.2")
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.3")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
     testImplementation('junit:junit:4.13.2')
-    testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.7.10")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.8.10")
 }
 
 afterEvaluate {
