Update JDK to 17.

--- a/combustion-android-ble/build.gradle
+++ b/combustion-android-ble/build.gradle
@@ -20,6 +20,10 @@ def getVersionName = { ->
     }
 }
 
+kotlin {
+    jvmToolchain 17
+}
+
 android {
     namespace 'inc.combustion.framework'
     compileSdk 34
@@ -47,11 +51,6 @@ android {
     }
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
     packagingOptions {
         resources {
