--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.8.10'
-        android_gradle_version = '8.1.2'
-        appcompat_version = '1.5.1'
-        lifecycle_runtime_ktx_version = '2.5.1'
-        kable_core_version = '0.20.1'
-        lifecycle_service_version = '2.5.1'
-        junit_version = '1.1.4'
-        espresso_core_version = '3.5.0'
+        kotlin_version = "1.8.10"
+        android_gradle_version = "8.1.2"
+        appcompat_version = "1.5.1"
+        lifecycle_runtime_ktx_version = "2.5.1"
+        kable_core_version = "0.20.1"
+        lifecycle_service_version = "2.5.1"
+        junit_version = "1.1.4"
+        espresso_core_version = "3.5.0"
     }
     repositories {
         google()
@@ -16,8 +16,8 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$android_gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+        classpath("com.android.tools.build:gradle:$android_gradle_version")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
